Bug 1204084 - Double tap gesture fails when tapping on a large element contained in an iframe or scrollable div. r=botond